Refactor(member): 내 정보 조회 api 수정, dto 정적 팩토리 메서드로 변경 및 javadoc 추가